Switched to CSV generation instead of SQL, fixed bug in ReviewGenerator

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
       <artifactId>ojdbc8</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
