--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.username=SYSTEM
-spring.datasource.password=secret
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xepdb1
