Massive refractor, Removing JPA dependencies, Extracting all configuration options to GenerationConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xepdb1
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
